feat: add Python to Docker container feat: move docker-compose from doubtfire-api to doubtfire-deploy
Co-authored-by: Victoria-Mag <Victoria-Mag@users.noreply.github.com>
Co-authored-by: KuzzyKabana a<KuzzyKabana@users.noreply.github.com>

--- a/doubtfire-base.env
+++ b/doubtfire-base.env
@@ -41,6 +41,7 @@ DF_INSTITUTION_SETTINGS_RB="deakin.rb"
 DF_AUTH_METHOD=aaf
 
 # AAF settings
+DF_AUTH_METHOD: database
 DF_AAF_ISSUER_URL=https://rapid.test.aaf.edu.au
 DF_AAF_AUDIENCE_URL=http://localhost:3000
 DF_AAF_CALLBACK_URL=http://localhost:3000/api/auth/jwt
